k8s/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: container-registry
  labels:
    name: container-registry
